--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Aug 07 2024 22:22:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Aug 07 2024 22:29:49 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -40,16 +40,16 @@
       </div>
     </div>
   </div>
+  <div class="hero-title-block">
+    <p class="hero-text">Understand. Create. Deliver.<br></p>
+    <p class="hero-text-v2">Design Solutions.</p>
+    <div class="about-div">
+      <p class="subtitle">UX/UI Design &amp; Front End Development</p>
+      <p class="intro-paragraph">20 years of combined experience in graphic design, web design and front end development. Improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences for users.</p>
+    </div>
+  </div>
   <div id="aboutv" class="intro-section">
     <div class="intro-div">
-      <div class="hero-title-block">
-        <p class="hero-text">Understand. Create. Deliver.<br></p>
-        <p class="hero-text-v2">Design Solutions.</p>
-      </div>
-      <div class="about-div">
-        <p class="subtitle">UX/UI Design &amp; Front End Development</p>
-        <p class="intro-paragraph">20 years of combined experience in graphic design, web design and front end development. Improve UI/UX through various methods such as research, collaboration, problem solving, wire framing, prototyping and more. Interest in accepting feedback and using it to build better experiences for users.</p>
-      </div>
       <div class="icon-div">
         <div class="w-layout-grid grid">
           <div id="w-node-_7331fe8b-6002-ea69-4a57-dd1d744880e1-0a720657" class="icon-card">
@@ -222,7 +222,7 @@
             <h4 class="work-heading">Logo, UI Design &amp; Development</h4>
             <p class="paragraph-2">Approved to Print</p>
           </div>
-          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="100vw" alt=""></div>
+          <div class="div-block-6"><img src="images/resize-dark.png" loading="lazy" srcset="images/resize-dark-p-500.png 500w, images/resize-dark.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 3vw, (max-width: 991px) 4vw, 33px" alt=""></div>
         </div>
       </a>
       <a href="work/jason-carlson-ascension-website-design.html" class="work-link-block w-inline-block">
@@ -383,7 +383,7 @@
   <div id="Footer" class="footer">
     <div class="footer-div">
       <p class="copyright">© Copyright 2024 Vanessa Salinas - All Rights Reserved</p>
-      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="100vw" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
+      <a href="#topnav" class="back-to-top-circle w-inline-block"><img src="images/up-arrow-white.png" loading="lazy" sizes="40px" srcset="images/up-arrow-white-p-500.png 500w, images/up-arrow-white.png 512w" alt=""></a>
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606def14871f33b3fe720655" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
