--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Aug 08 2024 14:43:50 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Aug 08 2024 14:50:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -382,7 +382,7 @@
     </div>
   </div>
   <div id="contactv" class="intro-section contact-section">
-    <div class="intro-div">
+    <div class="sec-content-div">
       <div class="about-div">
         <h3 class="hero-text-v2">Get in Touch</h3>
         <p class="paragraph-contact">Continuous learning and practicing web accessibility standards in design and front-end development. Staying up-to-date on trends and techniques in web and design.<br></p>
